# redland-forge

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.md  app.py  architecture.md  auto_exit_manager.py  build-agent.py  build-redland  build-redland-on  build-redland-on.py  build-redland-spec.md  build-redland-tui.py  build-redland.py  build_step_detector.py  build_summary_collector.py  build_timing_cache.py  color_manager.py  config.py  exception_handler.py  host_section.py  host_visibility_manager.py  input_handler.py  layout_manager.py  navigate-spec.md  parallel_ssh_manager.py  progress_display_manager.py  pyproject.toml  redland-forge  redland-forge.py  renderer.py  requirements.txt  setup.cfg  ssh_connection.py  statistics_manager.py  test_auto_exit_manager.py  test_build_step_detector.py  (+17 more)
src/redland_forge/: __init__.py  app.py  auto_exit_manager.py  build-agent.py  build_step_detector.py  build_summary_collector.py  build_timing_cache.py  color_manager.py  config.py  exception_handler.py  host_section.py  host_visibility_manager.py  input_handler.py  layout_manager.py  output_buffer.py  parallel_ssh_manager.py  progress_display_manager.py  renderer.py  ssh_connection.py  statistics_manager.py  version.py
tests/: test_auto_exit_manager.py  test_build_step_detector.py  test_build_summary_collector.py  test_build_timing_cache.py  test_color_system.py  test_config.py  test_host_section.py  test_host_visibility_manager.py  test_input_handler.py  test_layout_manager.py  test_output_buffer.py  test_parallel_ssh_manager.py  test_progress_display_manager.py  test_renderer.py  test_ssh_connection.py  test_statistics_manager.py  test_text_formatter.py
